test_scores/negative_dimers/features/Q5TCQ9.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q5TCQ9.pkl.xz